hphp/hack/test/typecheck/ambiguous_declaration_one_synthetic_1.php.exp
File "ambiguous_declaration_one_synthetic_1.php", line 19, characters 7-7:
Class `B` does not correctly implement all required members  (Typing[4341])
  File "ambiguous_declaration_one_synthetic_1.php", line 20, characters 11-12:
  Some members are incompatible with those declared in type `T2`
  File "ambiguous_declaration_one_synthetic_1.php", line 16, characters 19-21:
  The method `foo` is not compatible with the overridden method
  File "ambiguous_declaration_one_synthetic_1.php", line 16, characters 19-21:
  `T3` and `T2` both declare ambiguous implementations of `foo`.
  File "ambiguous_declaration_one_synthetic_1.php", line 16, characters 19-21:
  `T3`'s definition is here.
  File "ambiguous_declaration_one_synthetic_1.php", line 12, characters 19-21:
  `T2`'s definition is here.
  File "ambiguous_declaration_one_synthetic_1.php", line 16, characters 19-21:
  Redeclare `foo` in `B` with a compatible signature.
